@startuml

class WebhookUnknown extends Exception {}
class RSSFluxUnknown extends Exception {}

class Webhook {
- url: string
+ Webhook(url: string)
+ send(data: string)
}

class RSSFlux {
- {static} feeder: RssFeedEmitter
- url: string
- eventName: string
+ RSSFlux(url: string, refreshTime: int = 2000)
+ onUpdate(f: function)
}

class RSSHandler {
+ RSSHandler()
+ pair(flux: RSSFlux, webhook: Webhook)
+ unpair(flux: RSSFlux, webhook: Webhook) throws WebhookUnknown, RSSFluxUnknown
+ unpairAllFrom(flux: RSSFlux) throws WebhookUnknown, RSSFluxUnknown
+ unpairAll() throws WebhookUnknown, RSSFluxUnknown
}

RSSFlux o-- RSSHandler
Webhook o-- RSSHandler

note left of RSSFlux::RSSFlux
...
feeder.add({
  url: this.url,
  refresh: refreshTime,
  eventName: this.eventName
});
...
end note

note left of RSSFlux::onUpdate
onUpdate(f: function) {
  f(data)
}
end note

note right of RSSHandler::pair
unpair(flux: RSSFlux, webhook: Webhook) {
  ...
  function f(data) {}
  flux.onUpdate(f)
  ...
}
end note

note right of RSSHandler::unpair
unpair(flux: RSSFlux, webhook: Webhook) {
  ...
  function f(data) {
     webhook.send(data)
  }
  flux.onUpdate(f)
  ...
}
end note


@enduml